Implement new DTR validation API (for submodel request) - Removes unnecessary access control service method - Implements new REST endpoint and service method for submodel endpoint address access control handling - Adds new repository method for fetching shells by endpoint address - Adds new tests - Adds new role to documentation